welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: not enough arguments for method isFacingTrail: (cc: java.awt.Color)Boolean.
Unspecified value parameter cc.
    		if (isFacingTrail() == true) {
                                 ^SlugSnail:21: error: type mismatch;
 found   : Unit
 required: Boolean
   	if (!estFaceMur()) {
        ^